Colaboratory を使用して作成しました

--- a/hello.ipynb
+++ b/hello.ipynb
@@ -29,22 +29,22 @@
       "metadata": {
         "id": "gJER-BGXLnkm",
         "colab_type": "code",
+        "outputId": "7850613b-3a87-46f4-97a3-22c6f4db6699",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "392ce01b-e723-4f29-8af0-30f87e290d53"
+        }
       },
       "cell_type": "code",
       "source": [
-        "print(\"hello\")"
+        "print(\"hello!\")"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "hello\n"
+            "hello!\n"
           ],
           "name": "stdout"
         }
