Colaboratory を使用して作成しました

--- a/hello.ipynb
+++ b/hello.ipynb
@@ -49,6 +49,39 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "metadata": {
+        "id": "N7lmSiRnM2TB",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 104
+        },
+        "outputId": "53579a5d-16cb-4773-f63e-b73f2c20d391"
+      },
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "df = pd.read_csv(\"sample_data/mnist_train_small.csv\")\n",
+        "\n",
+        "df.info()"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 19999 entries, 0 to 19998\n",
+            "Columns: 785 entries, 6 to 0.590\n",
+            "dtypes: int64(785)\n",
+            "memory usage: 119.8 MB\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
