Colaboratory を使用して作成しました

--- a/hello.ipynb
+++ b/hello.ipynb
@@ -12,7 +12,8 @@
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -29,7 +30,7 @@
       "metadata": {
         "id": "gJER-BGXLnkm",
         "colab_type": "code",
-        "outputId": "7850613b-3a87-46f4-97a3-22c6f4db6699",
+        "outputId": "baf24adf-5b44-4c81-9ae1-39fcc31d12a7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -37,47 +38,14 @@
       },
       "cell_type": "code",
       "source": [
-        "print(\"hello!\")"
+        "print(\"hello\")"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "hello!\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "metadata": {
-        "id": "N7lmSiRnM2TB",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 104
-        },
-        "outputId": "53579a5d-16cb-4773-f63e-b73f2c20d391"
-      },
-      "cell_type": "code",
-      "source": [
-        "import pandas as pd\n",
-        "\n",
-        "df = pd.read_csv(\"sample_data/mnist_train_small.csv\")\n",
-        "\n",
-        "df.info()"
-      ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "<class 'pandas.core.frame.DataFrame'>\n",
-            "RangeIndex: 19999 entries, 0 to 19998\n",
-            "Columns: 785 entries, 6 to 0.590\n",
-            "dtypes: int64(785)\n",
-            "memory usage: 119.8 MB\n"
+            "hello\n"
           ],
           "name": "stdout"
         }
