Colaboratory を使用して作成しました

--- a/mnist_use_keras.ipynb
+++ b/mnist_use_keras.ipynb
@@ -31,7 +31,8 @@
       },
       "cell_type": "markdown",
       "source": [
-        "- keras/mnist_mlp.py at master · keras-team/keras https://github.com/keras-team/keras/blob/master/examples/mnist_mlp.py"
+        "- keras/mnist_mlp.py at master · keras-team/keras https://github.com/keras-team/keras/blob/master/examples/mnist_mlp.py\n",
+        "- kerasのmnistのサンプルを読んでみる - Qiita https://qiita.com/ash8h/items/29e24fc617b832fba136"
       ]
     },
     {
