Colaboratory を使用して作成しました

--- a/mnist_use_keras.ipynb
+++ b/mnist_use_keras.ipynb
@@ -39,11 +39,11 @@
       "metadata": {
         "id": "qnT-5rSX7AVn",
         "colab_type": "code",
+        "outputId": "b5e35d89-4c39-442e-97fe-76e7b0febb90",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1332
-        },
-        "outputId": "35b810b4-2edc-419d-939d-54f8da403d32"
+          "height": 614
+        }
       },
       "cell_type": "code",
       "source": [
@@ -86,6 +86,10 @@
         "              optimizer=RMSprop(),\n",
         "              metrics=['accuracy'])\n",
         "\n",
+        "# fitting\n",
+        "import time\n",
+        "start = time.time()\n",
+        "\n",
         "history = model.fit(x_train, y_train,\n",
         "                    batch_size=batch_size,\n",
         "                    epochs=epochs,\n",
@@ -93,9 +97,12 @@
         "                    validation_data=(x_test, y_test))\n",
         "score = model.evaluate(x_test, y_test, verbose=0)\n",
         "print('Test loss:', score[0])\n",
-        "print('Test accuracy:', score[1])"
+        "print('Test accuracy:', score[1])\n",
+        "\n",
+        "elapsed_time = time.time() - start\n",
+        "print(\"elapsed_time: {0}\".format(elapsed_time))"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,7 +115,7 @@
           "output_type": "stream",
           "text": [
             "Downloading data from https://s3.amazonaws.com/img-datasets/mnist.npz\n",
-            "11493376/11490434 [==============================] - 1s 0us/step\n",
+            "11493376/11490434 [==============================] - 0s 0us/step\n",
             "60000 train samples\n",
             "10000 test samples\n",
             "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
@@ -138,48 +145,7 @@
             "Instructions for updating:\n",
             "Use tf.cast instead.\n",
             "Train on 60000 samples, validate on 10000 samples\n",
-            "Epoch 1/20\n",
-            "60000/60000 [==============================] - 9s 158us/step - loss: 0.2430 - acc: 0.9250 - val_loss: 0.0969 - val_acc: 0.9681\n",
-            "Epoch 2/20\n",
-            "60000/60000 [==============================] - 9s 146us/step - loss: 0.1019 - acc: 0.9685 - val_loss: 0.0726 - val_acc: 0.9784\n",
-            "Epoch 3/20\n",
-            "60000/60000 [==============================] - 9s 144us/step - loss: 0.0740 - acc: 0.9776 - val_loss: 0.0721 - val_acc: 0.9788\n",
-            "Epoch 4/20\n",
-            "60000/60000 [==============================] - 9s 144us/step - loss: 0.0597 - acc: 0.9820 - val_loss: 0.0725 - val_acc: 0.9814\n",
-            "Epoch 5/20\n",
-            "60000/60000 [==============================] - 9s 146us/step - loss: 0.0494 - acc: 0.9851 - val_loss: 0.0749 - val_acc: 0.9804\n",
-            "Epoch 6/20\n",
-            "60000/60000 [==============================] - 9s 145us/step - loss: 0.0425 - acc: 0.9871 - val_loss: 0.0761 - val_acc: 0.9810\n",
-            "Epoch 7/20\n",
-            "60000/60000 [==============================] - 9s 145us/step - loss: 0.0377 - acc: 0.9886 - val_loss: 0.0854 - val_acc: 0.9796\n",
-            "Epoch 8/20\n",
-            "60000/60000 [==============================] - 9s 144us/step - loss: 0.0348 - acc: 0.9902 - val_loss: 0.0962 - val_acc: 0.9800\n",
-            "Epoch 9/20\n",
-            "60000/60000 [==============================] - 9s 145us/step - loss: 0.0315 - acc: 0.9908 - val_loss: 0.0874 - val_acc: 0.9816\n",
-            "Epoch 10/20\n",
-            "60000/60000 [==============================] - 9s 147us/step - loss: 0.0273 - acc: 0.9921 - val_loss: 0.0871 - val_acc: 0.9824\n",
-            "Epoch 11/20\n",
-            "60000/60000 [==============================] - 9s 149us/step - loss: 0.0264 - acc: 0.9927 - val_loss: 0.0933 - val_acc: 0.9822\n",
-            "Epoch 12/20\n",
-            "60000/60000 [==============================] - 9s 150us/step - loss: 0.0237 - acc: 0.9928 - val_loss: 0.0904 - val_acc: 0.9837\n",
-            "Epoch 13/20\n",
-            "60000/60000 [==============================] - 9s 147us/step - loss: 0.0247 - acc: 0.9933 - val_loss: 0.0968 - val_acc: 0.9830\n",
-            "Epoch 14/20\n",
-            "60000/60000 [==============================] - 9s 146us/step - loss: 0.0226 - acc: 0.9937 - val_loss: 0.1015 - val_acc: 0.9828\n",
-            "Epoch 15/20\n",
-            "60000/60000 [==============================] - 9s 145us/step - loss: 0.0222 - acc: 0.9942 - val_loss: 0.0960 - val_acc: 0.9833\n",
-            "Epoch 16/20\n",
-            "60000/60000 [==============================] - 9s 145us/step - loss: 0.0184 - acc: 0.9949 - val_loss: 0.1066 - val_acc: 0.9835\n",
-            "Epoch 17/20\n",
-            "60000/60000 [==============================] - 9s 145us/step - loss: 0.0185 - acc: 0.9950 - val_loss: 0.1147 - val_acc: 0.9813\n",
-            "Epoch 18/20\n",
-            "60000/60000 [==============================] - 9s 144us/step - loss: 0.0204 - acc: 0.9947 - val_loss: 0.1054 - val_acc: 0.9841\n",
-            "Epoch 19/20\n",
-            "60000/60000 [==============================] - 9s 148us/step - loss: 0.0195 - acc: 0.9950 - val_loss: 0.1090 - val_acc: 0.9829\n",
-            "Epoch 20/20\n",
-            "60000/60000 [==============================] - 9s 145us/step - loss: 0.0178 - acc: 0.9954 - val_loss: 0.1078 - val_acc: 0.9831\n",
-            "Test loss: 0.10778291632974038\n",
-            "Test accuracy: 0.9831\n"
+            "Epoch 1/20\n"
           ],
           "name": "stdout"
         }
@@ -189,11 +155,11 @@
       "metadata": {
         "id": "REwQzU_s8ai2",
         "colab_type": "code",
+        "outputId": "a083fde3-7991-4499-81b2-3962a43878b6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 326
-        },
-        "outputId": "a083fde3-7991-4499-81b2-3962a43878b6"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -209,7 +175,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -229,22 +195,29 @@
       "metadata": {
         "id": "LaStEX7H9xHm",
         "colab_type": "code",
+        "outputId": "9ad01636-ab5f-4576-c158-ac732b17f6e9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "9ad01636-ab5f-4576-c158-ac732b17f6e9"
+        }
       },
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
         "from sklearn.metrics import confusion_matrix\n",
         "\n",
+        "import time\n",
+        "start = time.time()\n",
+        "\n",
         "result = model.predict_classes(x_test[0:16,], batch_size=32)\n",
         "\n",
-        "print(result)"
+        "elapsed_time = time.time() - start\n",
+        "\n",
+        "print(result)\n",
+        "\n",
+        "print(\"elapsed_time: {0}\".format(elapsed_time))"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
