Colaboratory を使用して作成しました

--- a/mnist_use_keras.ipynb
+++ b/mnist_use_keras.ipynb
@@ -11,7 +11,8 @@
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -39,10 +40,10 @@
       "metadata": {
         "id": "qnT-5rSX7AVn",
         "colab_type": "code",
-        "outputId": "b5e35d89-4c39-442e-97fe-76e7b0febb90",
+        "outputId": "6b26763c-e55d-484b-b953-64e99ae2fa3b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 614
+          "height": 1349
         }
       },
       "cell_type": "code",
@@ -102,7 +103,7 @@
         "elapsed_time = time.time() - start\n",
         "print(\"elapsed_time: {0}\".format(elapsed_time))"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -145,7 +146,49 @@
             "Instructions for updating:\n",
             "Use tf.cast instead.\n",
             "Train on 60000 samples, validate on 10000 samples\n",
-            "Epoch 1/20\n"
+            "Epoch 1/20\n",
+            "60000/60000 [==============================] - 4s 75us/step - loss: 0.2432 - acc: 0.9253 - val_loss: 0.1108 - val_acc: 0.9661\n",
+            "Epoch 2/20\n",
+            "60000/60000 [==============================] - 2s 28us/step - loss: 0.1032 - acc: 0.9690 - val_loss: 0.0764 - val_acc: 0.9772\n",
+            "Epoch 3/20\n",
+            "60000/60000 [==============================] - 2s 28us/step - loss: 0.0737 - acc: 0.9779 - val_loss: 0.0740 - val_acc: 0.9805\n",
+            "Epoch 4/20\n",
+            "60000/60000 [==============================] - 2s 28us/step - loss: 0.0590 - acc: 0.9824 - val_loss: 0.0799 - val_acc: 0.9797\n",
+            "Epoch 5/20\n",
+            "60000/60000 [==============================] - 2s 27us/step - loss: 0.0509 - acc: 0.9844 - val_loss: 0.0637 - val_acc: 0.9832\n",
+            "Epoch 6/20\n",
+            "60000/60000 [==============================] - 2s 28us/step - loss: 0.0433 - acc: 0.9872 - val_loss: 0.0725 - val_acc: 0.9822\n",
+            "Epoch 7/20\n",
+            "60000/60000 [==============================] - 2s 28us/step - loss: 0.0380 - acc: 0.9884 - val_loss: 0.0734 - val_acc: 0.9819\n",
+            "Epoch 8/20\n",
+            "60000/60000 [==============================] - 2s 28us/step - loss: 0.0342 - acc: 0.9901 - val_loss: 0.0831 - val_acc: 0.9821\n",
+            "Epoch 9/20\n",
+            "60000/60000 [==============================] - 2s 28us/step - loss: 0.0317 - acc: 0.9912 - val_loss: 0.0865 - val_acc: 0.9824\n",
+            "Epoch 10/20\n",
+            "60000/60000 [==============================] - 2s 28us/step - loss: 0.0269 - acc: 0.9920 - val_loss: 0.0904 - val_acc: 0.9809\n",
+            "Epoch 11/20\n",
+            "60000/60000 [==============================] - 2s 28us/step - loss: 0.0268 - acc: 0.9927 - val_loss: 0.0919 - val_acc: 0.9828\n",
+            "Epoch 12/20\n",
+            "60000/60000 [==============================] - 2s 28us/step - loss: 0.0243 - acc: 0.9931 - val_loss: 0.0999 - val_acc: 0.9828\n",
+            "Epoch 13/20\n",
+            "60000/60000 [==============================] - 2s 30us/step - loss: 0.0238 - acc: 0.9928 - val_loss: 0.1038 - val_acc: 0.9835\n",
+            "Epoch 14/20\n",
+            "60000/60000 [==============================] - 2s 31us/step - loss: 0.0256 - acc: 0.9932 - val_loss: 0.0878 - val_acc: 0.9840\n",
+            "Epoch 15/20\n",
+            "60000/60000 [==============================] - 2s 31us/step - loss: 0.0201 - acc: 0.9943 - val_loss: 0.0883 - val_acc: 0.9848\n",
+            "Epoch 16/20\n",
+            "60000/60000 [==============================] - 2s 31us/step - loss: 0.0197 - acc: 0.9946 - val_loss: 0.1032 - val_acc: 0.9835\n",
+            "Epoch 17/20\n",
+            "60000/60000 [==============================] - 2s 31us/step - loss: 0.0178 - acc: 0.9949 - val_loss: 0.1002 - val_acc: 0.9856\n",
+            "Epoch 18/20\n",
+            "60000/60000 [==============================] - 2s 30us/step - loss: 0.0182 - acc: 0.9948 - val_loss: 0.1161 - val_acc: 0.9825\n",
+            "Epoch 19/20\n",
+            "60000/60000 [==============================] - 2s 28us/step - loss: 0.0193 - acc: 0.9952 - val_loss: 0.1144 - val_acc: 0.9832\n",
+            "Epoch 20/20\n",
+            "60000/60000 [==============================] - 2s 28us/step - loss: 0.0188 - acc: 0.9955 - val_loss: 0.1088 - val_acc: 0.9833\n",
+            "Test loss: 0.10880493171306163\n",
+            "Test accuracy: 0.9833\n",
+            "elapsed_time: 37.9570255279541\n"
           ],
           "name": "stdout"
         }
@@ -195,10 +238,10 @@
       "metadata": {
         "id": "LaStEX7H9xHm",
         "colab_type": "code",
-        "outputId": "9ad01636-ab5f-4576-c158-ac732b17f6e9",
+        "outputId": "b5bac972-53c2-4143-fbbc-7b4fa9785432",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 52
         }
       },
       "cell_type": "code",
@@ -217,12 +260,13 @@
         "\n",
         "print(\"elapsed_time: {0}\".format(elapsed_time))"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[7 2 1 0 4 1 4 9 5 9 0 6 9 0 1 5]\n"
+            "[7 2 1 0 4 1 4 9 5 9 0 6 9 0 1 5]\n",
+            "elapsed_time: 0.03293943405151367\n"
           ],
           "name": "stdout"
         }
