--- a/time_series_3.ipynb
+++ b/time_series_3.ipynb
@@ -28,41 +28,25 @@
       "metadata": {
         "id": "HT5rFgy-6VAA",
         "colab_type": "code",
-        "outputId": "755f5381-9252-47c5-ba8e-4b910cb7f179",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 124
-        }
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
         "from google.colab import drive\n",
         "drive.mount(\"/content/drive\")"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=email%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdocs.test%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive.photos.readonly%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fpeopleapi.readonly&response_type=code\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
-            "Mounted at /content/drive\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
         "id": "7qHSIY51LXvu",
         "colab_type": "code",
+        "outputId": "b6491bb9-3b6a-458f-dc89-59ea649576bf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 639
-        },
-        "outputId": "b6491bb9-3b6a-458f-dc89-59ea649576bf"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -73,7 +57,7 @@
         "df.info()\n",
         "df.head()"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
